Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26535

Block-select doesn't work well with the keyboard

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 6.0.0-rc1
    • Qt Creator 6.0.0-rc1
    • Editors
    • None
    • e0c115fb9b1806e77930bbc9d4484eaefa8aee5f (qt-creator/qt-creator/6.0)

      • Hold Shift and press Right key
      • Hold Shift and Alt and press Down key several times
      • The character is only selected on the first line. All the other lines have new cursors (in the expected place), but no selection.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes